--- a/05_PCA/assignment.ipynb
+++ b/05_PCA/assignment.ipynb
@@ -13,15 +13,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q1. \n",
+    "### Q1. Read In Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [re, :, 6, ., 1100, ,, disc, :, uniformitarian...\n",
+       "1    [the, other, side, of, *, galicismos, *, *, ga...\n",
+       "2    [re, :, equistar, deal, tickets, are, you, sti...\n",
+       "3    [Hello, I, am, your, hot, lil, horny, toy., I,...\n",
+       "4    [software, at, incredibly, low, prices, (, 86,...\n",
+       "Name: Email Text, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_parquet('https://data434.s3.us-east-2.amazonaws.com/Phishing_Email.parquet')\n",
+    "# raw data head\n",
+    "df.head()\n",
     "\n",
-    "Open the `Phishing_Email.parquet` data. It is available at `https://data434.s3.us-east-2.amazonaws.com/Phishing_Email.parquet`, and you can download it directly using Pandas by providing that URL: `df = pd.read_parquet('https://data434.s3.us-east-2.amazonaws.com/Phishing_Email.parquet')`.\n",
+    "# after splitting head\n",
+    "tokens = df['Email Text'].str.split()\n",
+    "tokens.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, to clean the tokens, I would convert to lowercase, remove stop words including words like \"the\" and \"is\" since those are neutral words and would not be useful in detecting phishing emails. \n",
+    "Additionally, I would remove punctuation and remove special characters. \n",
     "\n",
-    "We just want to look at the first step of cleaning text data, so you can get an idea of how it works. The `Email Text` variable contains the actual text of the email and the `Email Type` takes the value `Phishing Email` or `Safe Email`. We want to predict which emails are phishing emails from their contents. \n",
+    "Then, to represent the emails, I would use Term Frequency-Inverse Document Frequency to assign weights to tokens based on their frequency in an email compared to their overall occurrence across all emails. This would emphasize important words while reducing the impact of the common words that occur. \n",
     "\n",
-    "Use the `str.split()` method to break the `Phishing Email` values into **tokens**: The individual words or symbols that create text data like emails. Natural Language Processing is primarily about analyzing the frequency and co-occurrence of tokens. Print the results of your split and examine it.\n",
-    "\n",
-    "In words, how would you clean the tokens and use them to predict whether the email is a phishing scam or not? A short summary of the kinds of tasks you would do and how you would run a predictive algorithm is fine."
+    "Finally, after generating the TF-IDF matrix, PCA can be used to reduce the dimensionality, retaining only the most informative features while eliminating redundancy. The reduced feature set is then used as input for a linear model. This utilizes the flexibility linear models while efficiently handling the high dimensionality of text data.\n"
    ]
   },
   {
@@ -32,6 +68,11 @@
     "\n",
     "I aggregated all the emails into a single vector, and removed the punctuation and very common words (e.g. \"the\"). Run the below code chunk to open it, and use the Counter class to look at the most common words:"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -113,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
