--- a/05_PCA/assignment.ipynb
+++ b/05_PCA/assignment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
        "Name: Email Text, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,6 +180,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What I noticed from this is that most tokens appear only once. The token with the highest frequency is 1365 times. The average frequency is only 5.68 times, thus most of the tokens have lower frequencies at about 10 times. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Q3. \n",
     "\n",
     "Load `Phishing_clean.parquet`. This is the text from the e-mails broken into the most common 2,711 tokens and one-hot-encoded as features/covariates. So each row is an e-mail, the `Email Type` takes the value 1 if it's a scam and 0 otherwise, and every other column is a word or symbol that occurs in at least 15 e-mails.\n",
@@ -187,6 +194,201 @@
     "1. Perform an 80/20 train-test split of the data.\n",
     "2. Run a regression of $y$ on the one-hot-encoded emails. What is the $R^2$ on the test set? On the training set?\n",
     "3. What words have the largest coefficients in absolute value and most strongly influence predictions? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train:  0.6144860820476118\n",
+      "test:  -0.000268384328047544\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_parquet('Phishing_clean.parquet')\n",
+    "\n",
+    "# separate target variable (email type) from features\n",
+    "y = df['Email Type']\n",
+    "X = df.drop('Email Type',axis=1)\n",
+    "\n",
+    "## 1. split training and test sets \n",
+    "# 80% -> training, 20% -> test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=125)\n",
+    "\n",
+    "## 2. train linear regression model on training data\n",
+    "\n",
+    "# fit linear regression model on training data\n",
+    "lm_0 = LinearRegression(fit_intercept=False).fit(X_train,y_train)\n",
+    "\n",
+    "# use trained model to make predictions on test and training data\n",
+    "y_hat_test_0 = lm_0.predict(X_test)\n",
+    "y_hat_train_0 = lm_0.predict(X_train)\n",
+    "\n",
+    "# print r-squared scores for model on the training and test data \n",
+    "# shows how well model fits with the data\n",
+    "print('train: ', r2_score(y_hat_train_0,y_train) )\n",
+    "print('test: ', r2_score(y_hat_test_0,y_test) )    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>variable</th>\n",
+       "      <th>value</th>\n",
+       "      <th>abs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2223</th>\n",
+       "      <td>1997-2002</td>\n",
+       "      <td>-1.514772e+13</td>\n",
+       "      <td>1.514772e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2224</th>\n",
+       "      <td>pudge.</td>\n",
+       "      <td>1.514772e+13</td>\n",
+       "      <td>1.514772e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>1.448712e+13</td>\n",
+       "      <td>1.448712e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>000</td>\n",
+       "      <td>-1.151892e+13</td>\n",
+       "      <td>1.151892e+13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>340</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>-9.766916e+12</td>\n",
+       "      <td>9.766916e+12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1052</th>\n",
+       "      <td>soon</td>\n",
+       "      <td>-1.974106e-04</td>\n",
+       "      <td>1.974106e-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>319</th>\n",
+       "      <td>thing</td>\n",
+       "      <td>1.831055e-04</td>\n",
+       "      <td>1.831055e-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>254</th>\n",
+       "      <td>say</td>\n",
+       "      <td>-1.220703e-04</td>\n",
+       "      <td>1.220703e-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>512</th>\n",
+       "      <td>science</td>\n",
+       "      <td>-6.866455e-05</td>\n",
+       "      <td>6.866455e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>989</th>\n",
+       "      <td>greg</td>\n",
+       "      <td>2.288818e-05</td>\n",
+       "      <td>2.288818e-05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2711 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       variable         value           abs\n",
+       "2223  1997-2002 -1.514772e+13  1.514772e+13\n",
+       "2224     pudge.  1.514772e+13  1.514772e+13\n",
+       "6          2002  1.448712e+13  1.448712e+13\n",
+       "96          000 -1.151892e+13  1.151892e+13\n",
+       "340        2005 -9.766916e+12  9.766916e+12\n",
+       "...         ...           ...           ...\n",
+       "1052       soon -1.974106e-04  1.974106e-04\n",
+       "319       thing  1.831055e-04  1.831055e-04\n",
+       "254         say -1.220703e-04  1.220703e-04\n",
+       "512     science -6.866455e-05  6.866455e-05\n",
+       "989        greg  2.288818e-05  2.288818e-05\n",
+       "\n",
+       "[2711 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 3. \n",
+    "\n",
+    "# create df to store the variable names and their coefficient vals from trained model  \n",
+    "rdf = pd.DataFrame({'variable':lm_0.feature_names_in_ , 'value':lm_0.coef_})\n",
+    "\n",
+    "# stores absolute value of coefficient\n",
+    "rdf['abs'] = np.abs(rdf['value'])\n",
+    "# sort by abs col in descending order to highlight important variables\n",
+    "rdf.sort_values('abs',ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The words with the largest coefficients in absolute value that most strongly influence the predictions are: \n",
+    "- 1997-2002\n",
+    "- pudge.\n",
+    "- 2002\n",
+    "- 000\n",
+    "- 2005\n",
+    "\n",
+    "These are the variables with the large absolute coefficients, meaning that they have a significant influence on whether an email is detected as phishing or not. The positive or negative sign of the coefficients indicates whether the presence of these tokens increases or decreases the likelihood of an email being classified as phishing. \n",
+    "\n",
+    "In particular, 1997-2002 and 000 have negative coefficients, indicating that they may decrease the likelihood of the email being classified as phishing. However, pudge. and 2005 have large positive coefficients, indicating that they may increase the likelihood of the email being classified as phishing. \n",
+    "\n",
+    "These findings indicate some unusual and potentially noisy tokens that might not necessary be meaningful in a real-world context but strongly correlated with phishing emails in the data. Thus, it's important to investigate these tokens are valid signals or if they represent noise."
    ]
   },
   {
