--- a/05_PCA/assignment.ipynb
+++ b/05_PCA/assignment.ipynb
@@ -473,12 +473,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train r2:  0.692897536096376\n",
+      "Test r2:  0.5873905973217195\n"
+     ]
+    }
+   ],
+   "source": [
+    "reduction = PCA(n_components=2610).fit(X_train)\n",
+    "Z_train = reduction.transform(X_train)\n",
+    "Z_test = reduction.transform(X_test)\n",
+    "\n",
+    "lm_k = LinearRegression().fit(Z_train,y_train)\n",
+    "y_hat_test = lm_k.predict(Z_test)\n",
+    "y_hat_train = lm_k.predict(Z_train)\n",
+    "\n",
+    "print('Train r2: ', r2_score(y_hat_train,y_train) )\n",
+    "print('Test r2: ', r2_score(y_hat_test,y_test) )    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test $R^2$ score is significantly higher than the simple linear model, increasing from 0.0 to 0.587. Additionally, the $R^2$ value is higher than the simple linear model for the training data, increasing from 0.61 to 0.693."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Q6.\n",
     "\n",
     "Explain briefly in your own words what the advantage is in using the principal components to run this high-dimensional regression, rather than the original data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using principal components for this high-dimensional regression helps deal with the problem of too many features being highly correlated. By transforming the data into uncorrelated components, PCA reduces noise and focuses on the most important patterns, which improves the model's ability to generalize to new data. This is why the test $R^2$\n",
+    "is much better compared to using the original features. \n",
+    "  \n",
+    "However, a drawback is that we lose the interpretability of the original features because the principal components are abstract combinations of them. Also, there’s a slight trade-off in training performance, as the model might not capture every nuance of the training data."
    ]
   }
  ],
