--- a/05_PCA/assignment.ipynb
+++ b/05_PCA/assignment.ipynb
@@ -519,10 +519,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using principal components for this high-dimensional regression helps deal with the problem of too many features being highly correlated. By transforming the data into uncorrelated components, PCA reduces noise and focuses on the most important patterns, which improves the model's ability to generalize to new data. This is why the test $R^2$\n",
-    "is much better compared to using the original features. \n",
-    "  \n",
-    "However, a drawback is that we lose the interpretability of the original features because the principal components are abstract combinations of them. Also, there’s a slight trade-off in training performance, as the model might not capture every nuance of the training data."
+    "Using principal components for this high-dimensional regression helps deal with the problem of too many features being highly correlated. By transforming the data into uncorrelated components, PCA reduces noise and focuses on the most important patterns, which improves the model's ability to generalize to new data. \n",
+    "However, a drawback to this approach is that we lose the interpretability of the original features because the principal components are abstract combinations of them. Additionally, this creates a slight trade-off in training performance, as the model may not capture every nuance of the training data."
    ]
   }
  ],
